tests/golden_files/block_left_new.txt
Traceback (most recent call last):
 File "formatter_example.py", line 72, in block_left
      71 | def block_left():
-->   72 |     nb_characters = len(letter
                               ^^^^^^^^^^
      73 |              for letter
                        ^^^^^^^^^^
      74 | 
      75 |                in
                        ^^^^
      76 |              "words")
                        ^^^^^^^^
TypeError: object of type 'generator' has no len()
